# Allegiance

./: .gitattributes  .gitignore  AGC.vcxproj.filters  AllSrvUI.vcproj  AllSrvUI.vcxproj  AllSrvUI.vcxproj.filters  AllSrv_RegServer.bat  Allegiance.sln  Allegiance.vcxproj  CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  Igc.vcxproj  LICENSE  Lobby.vcproj  Lobby.vcxproj  Lobby.vcxproj.filters  README.md  Server.vcxproj  Sh_GetDebug.bat  Sh_GetRetail.bat  SoundEngine.vcxproj  Utility.vcxproj  Vorbis.vcxproj  ZLibrary.vcproj  ZLibrary.vcxproj  appveyor.yml  effect.vcproj  effect.vcxproj  mdlc.vcxproj  mdledit.vcxproj  pigs.xml  sharemem.vcxproj  training.vcxproj
src/: .#Allegiance.sln.1.5.2.1.2.1  .#Allegiance.sln.1.5.2.1.2.3  Allegiance.sln  Allegiance2k10.sln  Allegiance2k3.sln  Allegiance2k8.sln  Alliances.txt  CMakeLists.txt  FAZ-readme.txt  Makefile  MkFromDS.mak  SolapReadme.txt  VSNet.Readme  _All.dsp  _Art.dsp  artbmp.dsp  artmdl.dsp  browse.dsp  changelog.txt  fedmake.dsp  fedsrvmake.dsp  fltc.dsp  kgv_sep_03.patch  license.txt  license_readme.txt  makedep.inc  makeexe.inc  makeexes  makefile.inc  mdlc.dsp  mdledit.dsp  me.dsp  multicore.txt  path.mak  readme.txt  todo.txt  xmunge.dsp
src/AGC/: .#AGC.vcproj.1.4.2.1.2.2  .#AGC.vcproj.1.4.2.1.2.3  .#agc.aps.1.2  AGC.cpp  AGC.debug.manifest  AGC.def  AGC.dsp  AGC.idl  AGC.manifest  AGC.manifest.bat  AGC.rc  AGC.rc2  AGC.vcproj  AGC2k10.vcxproj  AGC2k10.vcxproj.filters  AGC2k3.vcproj  AGC2k8.vcproj  AGCAleph.cpp  AGCAleph.h  AGCAleph.rgs  AGCAlephs.cpp  AGCAlephs.h  AGCAlephs.rgs  AGCAsteroid.cpp  AGCAsteroid.h  AGCAsteroid.rgs  AGCAsteroids.cpp  AGCAsteroids.h  AGCAsteroids.rgs  AGCCP.h  AGCChat.h  AGCCommand.cpp  AGCCommand.h  AGCCommand.rgs  AGCDBParams.cpp  AGCDBParams.h  AGCDBParams.rgs  AGCDebugHook.h  AGCEventData.cpp  AGCEventData.h  (+132 more)
src/AllGuard/: AllGuard.dsp  Allegiance.ini  machine.ini  makefile
src/AllSrvUI/: .#AllSrvUI.rc2.1.1  .#AllSrvUI.vcproj.1.1.4.1.2.1  .#AllSrvUI.vcproj.1.1.4.1.2.2  .#PageConnect.h.1.1  AdminPageThreadWnd.cpp  AdminPageThreadWnd.h  AllSrvUI.aps  AllSrvUI.cpp  AllSrvUI.dsp  AllSrvUI.h  AllSrvUI.rc  AllSrvUI.rc2  AllSrvUI.vcproj  AllSrvUI2k10.vcxproj  AllSrvUI2k10.vcxproj.filters  AllSrvUI2k3.vcproj  AllSrvUI2k8.vcproj  AllSrvUI32.dsp  AllSrvUISheet.cpp  AllSrvUISheet.h  AutoSizer.cpp  AutoSizer.h  ComboValueTranslator.h  DlgAbout.cpp  DlgAbout.h  DlgChatPreferences.cpp  DlgChatPreferences.h  DlgGameSelect.cpp  DlgGameSelect.h  GamePageSpecifics.cpp  GamePageSpecifics.h  GamePageTeam.cpp  GamePageTeam.h  GamePageWin.cpp  GamePageWin.h  GameParamsSheet.cpp  GameParamsSheet.h  PageChat.cpp  PageChat.h  PageConnect.cpp  (+11 more)
src/ArtworkHashGenerator/: ArtworkHashGenerator.cpp  ArtworkHashGenerator.vcxproj  ArtworkHashGenerator.vcxproj.filters  stdafx.cpp  stdafx.h
src/AutoUpdate/: AutoUpdate.aps  AutoUpdate.cpp  AutoUpdate.h  AutoUpdate.rc  AutoUpdate.rc2  AutoUpdate.rc3  AutoUpdate.rgs  makefile  pch.cpp  pch.h  resource.h
src/Club/: .#Club.vcproj.1.1.2.1.2.2  .#Club.vcproj.1.1.2.1.2.3  AllClub.aps  AllClub.cpp  AllClub.rc  AllClub.rc2  AllClub.rgs  AllClubModule.h  AllClubMsg.msg  Club.vcproj  Club2k10.vcxproj  Club2k8.vcproj  ClubApp.cpp  ClubApp.h  ClubClient.cpp  ClubClient.h  ClubCounters.h  ClubMessages.h  ClubQueries.h  ClubSite.h  StaticData.cpp  StaticData.h  clubqguids.cpp  clubqueries2.h  makefile  pch.cpp  pch.h  resource.h
src/FedSrv/: .#AdminGames.cpp.1.1  .#FedSrv.CPP.1.1.4.1.2.2  .#Server.vcproj.1.4.2.1.2.3  .#Server.vcproj.1.4.2.1.2.4  .#fedsrv.rc2.1.1.6.1  .#fsmission.cpp.1.1.4.1.2.1  AGC.tlb  AdminEventLoggerHook.cpp  AdminEventLoggerHook.h  AdminGame.cpp  AdminGame.h  AdminGame.rgs  AdminGames.cpp  AdminGames.h  AdminGames.rgs  AdminServer.cpp  AdminServer.h  AdminServer.rgs  AdminSession.cpp  AdminSession.h  AdminSession.rgs  AdminSessionClass.cpp  AdminSessionClass.h  AdminSessionEventSink.cpp  AdminSessionEventSink.h  AdminSessionSecure.h  AdminSessionSecureHost.h  AdminShip.cpp  AdminShip.h  AdminShip.rgs  AdminUser.cpp  AdminUser.h  AdminUser.rgs  AdminUsers.cpp  AdminUsers.h  AdminUsers.rgs  AdminUtil.h  AllSrv32.rgs  AllSrvModuleIDL.h  AllSrvModuleIDL.idl  (+71 more)
src/Igc/: .#Igc.vcproj.1.4.2.1.2.1  .#Igc.vcproj.1.4.2.1.2.2  .#igc.h.1.1.4.1.2.2  .#mapmakerigc.cpp.1.1  CMakeLists.txt  Igc.dsp  Igc.vcproj  Igc2k10.vcxproj  Igc2k3.vcproj  Igc2k8.vcproj  afterburnerIGC.cpp  afterburnerIGC.h  asteroidigc.cpp  asteroidigc.h  bucketigc.cpp  bucketigc.h  buildingeffectigc.h  buoyigc.cpp  buoyigc.h  chaffigc.cpp  chaffigc.h  chafftypeigc.cpp  chafftypeigc.h  civilizationigc.cpp  civilizationigc.h  cloakigc.cpp  cloakigc.h  clusterIGC.cpp  clusterIGC.h  common.cpp  developmentigc.cpp  developmentigc.h  dispenserigc.cpp  dispenserigc.h  dronetypeigc.cpp  dronetypeigc.h  hullTypeIGC.cpp  hullTypeIGC.h  igc.def  igc.h  (+54 more)
src/Inc/: .#SlmVer.h.1.1.4.1  AGCIDL.idl  Allegiance.gdf  AutoHandle.h  COMDEF.H  COMIP.H  COMUTIL.H  ClubMessages.h  IBN.H  MessageVersion.h  Messages.h  NetworkGame.h  Parts.h  PigsIDL.idl  ScrRun.idl  SlmVer.h  Utility.h  Utility.hxx  VerRes.h  VerRes.rc  XMLPtrs.h  ZoneAuthDecrypt.h  allegdb.h  assert.h  drones.h  gameparamdata.h  messagecore.h  msr.h  quickchat.h  regkey.h  sharemem.h  steam_appid.txt
src/Lobby/: AutoUpdate.cpp  LobbyAppSite.h  broadcast.cpp  broadcast.h  lobby.rgs  lobbyapp.h  lobbyevents.cpp  lobbymsg.msg  mission.cpp  pch.h
src/MSRGuard/: AppMode.h  AppModeAttach.cpp  AppModeAttach.h  AppModeBind.cpp  AppModeBind.h  AppModeCreate.cpp  AppModeCreate.h  AppModeDebug.h  AppModeHelp.cpp  AppModeHelp.h  Default.ini  Empty.ini  LoadedModules.cpp  LoadedModules.h  MSRGuard.cpp  MSRGuard.dsp  MSRGuard.h  MSRGuard.htm  MSRGuard.rc  MSRGuard.rc2  State.xml  ToolHelp.h  machine.ini  makefile  pch.h  resource.h
src/Pigs/: PigSrv.reg
src/Reloader/: Reloader.cpp  Reloader.rc  makefile  pch.h  resource.h
src/Setup/: CopyInitialArt.bat  MakeSetup.bat  Setup.bat  copyofflineart.bat  machine.ini
src/SrvHost/: Main.frm  SrvHost.vbp  SrvHost.vbw  mssccprj.scc
src/SymGuard/: Lookup.js  Lookup.vbs  PreProcessState.vbs  SymGuard.cpp  SymGuard.def  (+26 more)
(+2548 files in other folders)
