ADD_SUBDIRECTORY(sharemem)
ADD_SUBDIRECTORY(test/TCLib)
ADD_SUBDIRECTORY(AGC)
ADD_SUBDIRECTORY(zlib)
ADD_SUBDIRECTORY(soundengine)
ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(effect)
ADD_SUBDIRECTORY(_Utility)
ADD_SUBDIRECTORY(Igc)
ADD_SUBDIRECTORY(training)
add_subdirectory(guids)
ADD_SUBDIRECTORY(clintlib)
ADD_SUBDIRECTORY(ui)
ADD_SUBDIRECTORY(WinTrek)
ADD_SUBDIRECTORY(FedSrv)
